[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-gzip"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }

# Templating
tera = "1.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Password hashing
argon2 = "0.5"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# HTTP client (webhooks)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Time utilities
chrono = "0.4"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random generation (tokens)
rand = "0.8"
hex = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Constant-time comparison (security)
subtle = "2.6"

# HTTP types
http = "1.1"
http-body-util = "0.1"

# Async utilities
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
